--- a/ansible/rancher-2-kubernetes-node.yml
+++ b/ansible/rancher-2-kubernetes-node.yml
@@ -2,4 +2,6 @@
 - name: Rancher 2 Kubernetes Nodes
   hosts: rancher-2-kubernetes-nodes
   roles:
-    - htop
+    - geerlingguy.firewall
+    - geerlingguy.docker
+    - singleplatform-eng.users
